# sealkey

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  specification-v0.5-ergonomie.md  specification-v0.6-refonte_gui.md  specification.md
icons/: sealkey_icon_mac.icns
include/: AppInfo.hpp  CryptoService.hpp  GpgExecutable.hpp  GpgKey.hpp  GpgProcess.hpp  IniFile.hpp  KeyStore.hpp  MainWindow.hpp  SealKeyModels.hpp  SealKeyPaths.hpp  SettingsService.hpp  SignatureService.hpp
resources/linux/: sealkey.desktop.in
resources/windows/: sealkey.rc
src/: AppInfo.cpp  CryptoService.cpp  GpgExecutable.cpp  GpgProcess.cpp  IniFile.cpp  KeyStore.cpp  MainWindow.cpp  SealKeyModels.cpp  SealKeyPaths.cpp  SettingsService.cpp  SignatureService.cpp  main.cpp
tests/: test_gpg_arguments.cpp  test_ini.cpp  test_key_parser.cpp  test_sealkey_paths.cpp
